--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -33,6 +33,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Build release
         uses: ./.github/workflows/composite/dotnet-build
@@ -115,6 +117,8 @@ jobs:
 
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Build release
         uses: ./.github/workflows/composite/dotnet-build
@@ -350,6 +354,8 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Build release
         uses: ./.github/workflows/composite/dotnet-build
@@ -416,6 +422,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - name: Download integration test results
         uses: actions/download-artifact@v3
