--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Check out repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Run dotnet format
         run: >-
