--- a/.github/workflows/dotnet-security-scan.yml
+++ b/.github/workflows/dotnet-security-scan.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Install scanner
         run: >-
@@ -45,6 +47,8 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
 
       - name: Restores dependencies
         env:
